media/css/layout.css
/**
 * @version 2.1.5
 * @package Perfect Easy & Powerful Contact Form
 * @copyright © 2016 Perfect Web sp. z o.o., All rights reserved. https://www.perfect-web.co
 * @license GNU/GPL http://www.gnu.org/licenses/gpl-3.0.html
 * @author Piotr Moćko
 */

.pwebcontact-box,
form.pwebcontact-form .btn {
	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
	font-size: 12px;
}

div.pwebcontact,
div.pwebcontact *,
div.pweb-modal,
div.pweb-modal *,
.pwebcontact_toggler {
	-webkit-box-sizing: content-box;
	-moz-box-sizing: content-box;
	box-sizing: content-box;
}
.pwebcontact.widget {
	-webkit-box-sizing: inherit;
	-moz-box-sizing: inherit;
	box-sizing: inherit;
}

 /* Positions
  * --------------------------------------------------------------------- 
  */
.pweb-left, .pweb-right, .pweb-top, .pweb-bottom {
	position: fixed;
	z-index: 1030;
}

.pweb-left {
	left: 0;
}
.pweb-right {
	right: 0;
}
.pweb-top {
	top: 0;
}
.pweb-bottom {
	bottom: 0;
}

.pweb-offset-left.pweb-top,
.pweb-offset-left.pweb-bottom {
	left: 20%;
}
.pweb-offset-right.pweb-top,
.pweb-offset-right.pweb-bottom {
	right: 20%;
}
.pweb-offset-top.pweb-left,
.pweb-offset-top.pweb-right {
	top: 20%;
}


 /* Toggler
  * --------------------------------------------------------------------- 
  */
.pwebcontact_toggler {
	position: relative;
	z-index: 1;
	display: block;
	width: 100px;
	height: 30px;
	line-height: 30px;
	padding: 5px 10px;
	text-decoration: none;
	text-align: left;
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
	font-size: 12px;
    background-color: #fff;
	cursor: pointer;
    -webkit-box-shadow: 0 0 1px rgba(255,255,255,0.2) inset;
	-moz-box-shadow: 0 0 1px rgba(255,255,255,0.2) inset;
	box-shadow: 0 0 1px rgba(255,255,255,0.2) inset;
}
.pwebcontact_toggler:hover {
	color: inherit;
	text-decoration: none;
	-webkit-transition: all .1s ease;
	-moz-transition: all .1s ease;
	-o-transition: all .1s ease;
	transition: all .1s ease;
}

.pweb-vertical.pweb-left .pwebcontact_toggler,
.pweb-vertical.pweb-right .pwebcontact_toggler {
	width: 30px;
	height: 120px;
	padding: 10px 5px;
}
.pweb-toggler-hidden .pwebcontact_toggler.pweb-closed {
	
}
.pweb-accordion .pwebcontact_toggler {
	width: auto;
}

 /* Toggler Gradient active
  * --------------------------------------------------------------------- 
  */
.pwebcontact_toggler.pweb-gradient:hover,
.pwebcontact_toggler.pweb-gradient.pweb-opened {
	background-image: none;
}

 /* Toggler Rounded
  * --------------------------------------------------------------------- 
  */
.pwebcontact_toggler.pweb-radius {
	-webkit-border-radius: 10px;
	-moz-border-radius: 10px;
	border-radius: 10px;
}
.pweb-left .pwebcontact_toggler.pweb-radius {
	-webkit-border-radius: 0 10px 10px 0;
	-moz-border-radius: 0 10px 10px 0;
	border-radius: 0 10px 10px 0;
}
.pweb-right .pwebcontact_toggler.pweb-radius {
	-webkit-border-radius: 10px 0 0 10px;
	-moz-border-radius: 10px 0 0 10px;
	border-radius: 10px 0 0 10px;
}
.pweb-top .pwebcontact_toggler.pweb-radius {
	-webkit-border-radius: 0 0 10px 10px;
	-moz-border-radius: 0 0 10px 10px;
	border-radius: 0 0 10px 10px;
}
.pweb-bottom .pwebcontact_toggler.pweb-radius {
	-webkit-border-radius: 10px 10px 0 0;
	-moz-border-radius: 10px 10px 0 0;
	border-radius: 10px 10px 0 0;
}


 /* Vertical Toggler text
  * --------------------------------------------------------------------- 
  */
.pweb-vertical.pweb-left .pwebcontact_toggler .pweb-text,
.pweb-vertical.pweb-right .pwebcontact_toggler .pweb-text {
	display: block;
	width: 100%;
	height: 100%;
	background-repeat: no-repeat;
	background-position: left top;
	text-align: center;
}
.pweb-vertical.pweb-left .pwebcontact_toggler.pweb-opened .pweb-text,
.pweb-vertical.pweb-right .pwebcontact_toggler.pweb-opened .pweb-text {
	background-position: right top;
}
.pweb-vertical.pweb-left .pwebcontact_toggler.pweb-rotate .pweb-text,
.pweb-vertical.pweb-right .pwebcontact_toggler.pweb-rotate .pweb-text {
	background-position: left bottom;
}
.pweb-vertical.pweb-left .pwebcontact_toggler.pweb-rotate.pweb-opened .pweb-text,
.pweb-vertical.pweb-right .pwebcontact_toggler.pweb-rotate.pweb-opened .pweb-text {
	background-position: right bottom;
}

/* Vertical Toggler CSS type
 * ---------------------------------------------------------------------
 */
.pweb-vertical-css .pweb-text {
	display: inline-block;
	writing-mode: vertical-lr;
	-webkit-writing-mode: vertical-lr;
	-ms-writing-mode: tb-rl;
	*writing-mode: tb-rl;
}
.pweb-vertical-css.pweb-rotate .pweb-text {
	transform-origin: 50%;
	transform: rotate(180deg);
}

 /* Toggler Icon
  * --------------------------------------------------------------------- 
  */
.pwebcontact_toggler.pweb-icon {
	padding: 5px 40px 5px 10px;
    font-size: 16px;
}
.pweb-horizontal.pweb-right .pwebcontact_toggler.pweb-icon {
	padding: 5px 10px 5px 40px;
}
.pweb-vertical.pweb-left .pwebcontact_toggler.pweb-icon,
.pweb-vertical.pweb-right .pwebcontact_toggler.pweb-icon {
	padding: 40px 5px 10px 5px;
}

.pwebcontact_toggler.pweb-icon .pweb-icon {
	display: block;
	position: absolute;
	top: 5px;
	right: 5px;
	width: 30px;
	height: 30px;
	line-height: 30px;
	text-align: center;
	font-size: 18px;
	background-repeat: no-repeat;
	background-position: center top;
}
.pwebcontact_toggler.pweb-icon-glyphicon .pweb-icon:before {
	font-family: 'Glyphicons Halflings';
	speak: none;
}
.pwebcontact_toggler.pweb-icon-gallery.pweb-opened .pweb-icon {
	background-position: center bottom;
}
.pweb-horizontal.pweb-right .pwebcontact_toggler.pweb-icon .pweb-icon {
	left: 5px;
	right: auto;
}


 /* Toggler - Slide in box
  * --------------------------------------------------------------------- 
  */
.pwebcontact.pweb-slidebox .pwebcontact_toggler {
	position: absolute;
	z-index: 1;
}
.pwebcontact.pweb-slidebox.pweb-horizontal.pweb-left .pwebcontact_toggler {
	top: 0;
	left: 0;
}
.pwebcontact.pweb-slidebox.pweb-horizontal.pweb-right .pwebcontact_toggler {
	top: 0;
	right: 0;
}
/* ... */

